2022-08-06 Se agrega comentarios a desasignaciones IT

--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Details.cshtml
@@ -445,7 +445,7 @@
 
                                         @if (asignaciones.Count > 0)
                                         {
-                                            <table id="datatable_1" class="table datatable table-bordered nowrap" cellspacing="0" width="100%">
+                                            <table id="datatable_1" class="table datatable table-bordered" cellspacing="0" width="100%">
                                                 <thead>
                                                     <tr>
                                                         <th width="1%">#</th>
@@ -470,6 +470,9 @@
                                                         </th>
                                                         <th width="1%">
                                                             Fecha Desvinculaci&oacute;n
+                                                        </th>
+                                                        <th width="1%">
+                                                            Comentario Desasignaci&oacute;n
                                                         </th>
                                                     </tr>
                                                 </thead>
@@ -508,6 +511,9 @@
                                                             </td>
                                                             <td>
                                                                 @Html.DisplayFor(model => item.fecha_desasignacion)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(model => item.comentario_desasignacion)
                                                             </td>
 
                                                         </tr>
