--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/DesasociarEquipo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/DesasociarEquipo.cshtml
@@ -235,6 +235,17 @@
                             </div>
 
                             <div class="ln_solid"></div>
+                            <div class="form-group row">
+                                <span style="color:black"><b>OBSERVACIONES DEASIGNACI&Oacute;N</b></span>
+                            </div>                         
+                            <div class="item form-group">
+                                <div class="col-md-12">
+                                    @Html.TextAreaFor(model => model.comentario_desasignacion, new { @class = "form-control", @rows = "4", @autocomplete = "off" })
+                                    @Html.ValidationMessageFor(model => model.comentario_desasignacion, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="ln_solid"></div>
 
                             <div class="item form-group">
                                 <div class="col-md-12 col-sm-12 offset-md-12">
