--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Details.cshtml
@@ -176,7 +176,7 @@
                                     <button type="button" onclick="MuestraDetalles(@Convert.ToInt32(item.EsInventario()), @generic.id)" class="btn btn-primary btn-sm" style="@(generic.id>0?"display:block":"display:none")" title="Ver Detalles"> <i class="fa-solid fa-eye"></i></button>
                                 </div>
                             </div>
-                           
+
                             <div class="item form-group">
                                 <label class="col-form-label col-md-1 col-sm-1 label-align">Comentario</label>
                                 <div class="col-md-9">
@@ -218,12 +218,33 @@
                             </div>
                         }
 
+                        @if (Model.fecha_desasignacion.HasValue)
+                        {
 
+                            <div class="ln_solid"></div>
+                            <div class="form-group row">
+                                <span style="color:black"><b>Desasignacion</b></span>
+                            </div>
+
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.fecha_desasignacion, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3 ">
+                                    @Html.EditorFor(model => model.fecha_desasignacion, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                                </div>
+                            </div>
+
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.comentario_desasignacion, new { @class = "control-label col-md-12 col-sm-12", @style = "text-align:left" })
+                            </div>
+
+                            <div class="item form-group">
+                                <div class="col-md-12">
+                                    @Html.TextAreaFor(model => model.comentario_desasignacion, new { @class = "form-control", @rows = "4", @readonly = "readonly" })
+                                </div>
+                            </div>
+                        }
 
                         <div class="ln_solid"></div>
-
-
-
                     </div>
                 </div>
                 <div>
@@ -245,7 +266,7 @@
     <script>
         $(document).ready(function () {
 
-           
+
         });
 
         function MuestraDetalles(inventario, id) {
