--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/EditarContabilidad.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/EditarContabilidad.cshtml
@@ -347,20 +347,20 @@
                                 <!-- Fecha registro -->
                                 @Html.LabelFor(model => model.fecha_direccion, new { @class = "control-label col-md-2 float-right" })
 
-                            <div class="col-md-4">
-                                @if (Model.fecha_direccion.HasValue)
-                                {
-                                    <input type="text" class="form-control col-md-12" value="@Model.fecha_direccion.Value" readonly>
-                                }
-                                else if (Model.id_direccion.HasValue && Model.estatus == Bitacoras.Util.PM_Status.RECHAZADO_DIRECCION)
-                                {
-                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
-                                }
-                                else
-                                {
-                                    <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
-                                }
-                            </div>
+                                <div class="col-md-4">
+                                    @if (Model.fecha_direccion.HasValue)
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="@Model.fecha_direccion.Value" readonly>
+                                    }
+                                    else if (Model.id_direccion.HasValue && Model.estatus == Bitacoras.Util.PM_Status.RECHAZADO_DIRECCION)
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                    }
+                                    else
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                    }
+                                </div>
                             </div>
                         }
                         <div class="form-group row">
@@ -417,7 +417,7 @@
                             @Html.HiddenFor(model => model.id_validador)
                             @Html.HiddenFor(model => model.descripcion_poliza)
                             @Html.HiddenFor(model => model.id_contabilidad)
-                             @Html.HiddenFor(model => model.currency_iso)
+                            @Html.HiddenFor(model => model.currency_iso)
 
                             @* input para saber si está o no activo el campo de soporte *@
                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
@@ -468,31 +468,21 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row">
-                                @*@Html.LabelFor(model => model.id_documento_registro, new { @class = "control-label col-md-2" })
-                <div class="col-md-5">
-
-                    <div class="input-group">
-                        <div class="custom-file">
-                            @Html.TextBoxFor(m => m.PostedFileRegistro, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip", @required = "required" })
-                            <label class="custom-file-label" for="PostedFileSoporte" style="text-align:left">Seleccione un archivo...</label>
-                        </div>
-                    </div>
-                    @Html.ValidationMessageFor(m => m.PostedFileRegistro, "", new { @class = "text-danger" })
-                </div>*@
+                            <div class="form-group row">                           
                                 <!--Documento SAP-->
                                 @Html.LabelFor(model => model.numero_documento_sap, new { @class = "control-label col-md-2" })
                                 <div class="col-md-2">
                                     @Html.EditorFor(m => m.numero_documento_sap, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                     @Html.ValidationMessageFor(model => model.numero_documento_sap, "", new { @class = "text-danger" })
                                 </div>
-                            </div>
-
-
-
-                            <div class="ln_solid"></div>
-                            <div class="item form-group">
-                                <div class="col-md-12 col-sm-12 ">
+                            </div><div class="ln_solid"></div><div class="item form-group">
+                                <div class="col-md-1 col-sm-1 ">
+                                    @if (!Model.fecha_registro.HasValue)
+                                    {
+                                        <button type="button" class="btn btn-danger btn-lg float-lg-left" onclick="mostrarModalRechazar()">Rechazar</button>
+                                    }
+                                </div>
+                                <div class="col-md-11 col-sm-11">
                                     <button type="submit" class="btn btn-success btn-lg float-lg-right">Finalizar Registro</button>
                                 </div>
                             </div>
@@ -510,6 +500,45 @@
         </div>
     </div>
 </div>
+
+<!-- Modal Rechazar -->
+<div class="modal fade" id="modalRechazar" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Rechazar</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            @using (Html.BeginForm("RechazarContabilidad", null, FormMethod.Post, new { }))
+            {
+                <div class="modal-body">
+                    <div class="form-group row">
+                        <h6>¿Realmente desea rechazar esta solicitud?</h6>
+                        <br />
+                        <div class="col-md-12">
+                            <h6>Comentario:</h6>
+                        </div>
+                        <div class="col-md-12">
+
+                            @Html.AntiForgeryToken()
+                            @Html.HiddenFor(model => model.id)
+                            @Html.TextAreaFor(model => model.comentario_rechazo, new { @class = "form-control", @rows = "4", @autocomplete = "off", @required = "required" })
+                            @Html.ValidationMessageFor(model => model.comentario_rechazo, "", new { @class = "text-danger" })
+
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-warning">Rechazar</button>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
 
 
 
@@ -566,11 +595,6 @@
             clicMenu(1);
         }
 
-        //muestra el modal de autorizar
-        function mostrarModalAutorizar() {
-            $('#modalAutorizar').modal('show')
-
-        }
 
         //muestra el modal de rechazar
         function mostrarModalRechazar() {
