2022-09-07 Se agrega campo fecha de renovación a IT_inventory_cellular_line.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Create.cshtml
@@ -65,6 +65,13 @@
                                     @Html.ValidationMessageFor(model => model.fecha_corte, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+                             <div class="item form-group">
+                                @Html.LabelFor(model => model.fecha_renovacion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.EditorFor(model => model.fecha_renovacion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.fecha_renovacion, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
 
                             <div class="ln_solid"></div>
                             <div class="item form-group">
