--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/responsivas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/responsivas.cshtml
@@ -200,7 +200,7 @@
                                                                 <i class="fa-solid fa-user-xmark"></i>
                                                             </a>
                                                         }
-                                                        <a href="@Url.Action("EditarResponsiva", null, new { id = item.id })" class="btn btn-primary btn-sm" rel="tooltip" data-title="Editar Responsiva" data-placement="right">
+                                                        <a href="@Url.Action("EditarResponsiva", null, new { id = item.IT_asignacion_hardware.id })" class="btn btn-primary btn-sm" rel="tooltip" data-title="Editar Responsiva" data-placement="right">
                                                             <i class="fa-regular fa-pen-to-square"></i>
                                                         </a>
                                                     </td>
